testsuite/tests/saks/should_fail/saks_fail003.hs
{-# LANGUAGE StandaloneKindSignatures #-}
{-# LANGUAGE PolyKinds #-}

module SAKS_Fail003 where

type T :: _
data T = MkT
